# data-science-projects

./: README.md  proj1-cadastrofornecedores.ipynb
Activity Regognition - Classification/: pyproject.toml
Activity Regognition - Classification/notebooks/: classification.ipynb
Activity Regognition - Classification/notebooks/.ipynb_checkpoints/: classification-checkpoint.ipynb
Exploring the Evolution of Linux/: notebook.ipynb
