[tool.poetry]
name = "classification-activity"
version = "0.1.0"
description = "Using classification to recognize activities from a single chest monted accelerometer"
authors = ["larryfisherman25 <matheusfgiraldes@gmail.com>"]
readme = "README.md"
packages = [{include = "classification_activity"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
seaborn = "^0.12.1"
scipy = "^1.9.3"
sklearn = "^0.0"
matplotlib = "^3.6.2"
ipykernel = "^6.17.0"
jupyterlab = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
